@@ -94,6 +94,8 @@ def findaccount(accountname, protocolname):
 def execute(uri):
     match = re.match(urlregexp, uri)
     protocol = match.group(2)
+    if protocol == "xmpp"
+        protocol = "jabber"
     if protocol == "aim" or protocol == "icq":
         protocol = "oscar"
     if protocol is not None:
